@@ -1,3 +1,5 @@
+2010-11-05 : added realm to gridspec file names
+2010-11-05 : reverted ext_cell_measures to cell_measures
 2010-10-27 : edited the test for permission on output directory, used to fail if you had group write privileges but that wasnt your main group
 2010-10-22 : Tagging 2.4.0
 2010-10-22 : updated docs to reflect all these changes
